--- a/calculator/src/App.css
+++ b/calculator/src/App.css
@@ -7,6 +7,11 @@
   pointer-events: none;
 }
 
+.center{
+  padding: 30px;
+  margin-top:100px;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
